Fix color contrast on slideshow captions

--- a/_sass/_patterns.scss
+++ b/_sass/_patterns.scss
@@ -1037,7 +1037,7 @@ ul.checklist {
   }
 
   .content-slider-caption {
-    color: $gray-darkest;
+    color: $black-light;
     min-height: 3.5em;
     margin-bottom: 0;
   }
